assets/scss/custom.scss
/* Hide overflow on the listen home page */
/*.index-page {
    height: 100%;
    overflow: scroll;
  }
*/

body{
    margin-top: 245px;
}

h1, h2, h3, h4, h5, h6, #site-header > div > div.hdr-left > nav {
    font-family: $heading-fonts;
    font-weight: 700;
    letter-spacing: 0.04em;
    padding-top: 0.2em;
}

h1 {
    font-size: 1.4em;
}

#site-header > div > div.hdr-left > nav {
    font-family: $heading-fonts;
    font-weight: 500;
    letter-spacing: 0.03em;
}

.slideOutDown {
  max-height: 100% !important;
}

table {
    table-layout: fixed;
    width: 100%;
    border-collapse: collapse;
    border: none;
}

table th, table td {
    padding: 1px !important;
    border: unset !important;
    text-align: left !important;
    font-size: small;
}

table th {
    font-weight: bold;
    white-space: normal;
    overflow-wrap: break-word;
}

table td {
    vertical-align: top;
    white-space: normal;
    overflow-wrap: break-word;
}

table caption {
    text-align: left;
    font-style: italic;
    font-size: small;
}

.content a {
    box-shadow: unset !important;
    text-decoration: underline !important;
}

.header-logo {
    width: 200px;
    margin-top: 12px;
}

.eist-event {
    /* if you wanna */
}

/* Parent container styling */
#player {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 400px;
    justify-content: center;
    align-items: stretch; /* align-items affects the children */
    position: relative;
    margin-top: 255px;
}

.broadcast-status {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-content: right;
    height: 50px;
    align-items: center;
    flex-wrap: nowrap;
    z-index: 2;
}

.broadcasting-live-text-status {
    font-size: large;
    z-index: 2;
    text-align: end;
}

.player-background {
    flex: 2;
    overflow: hidden;
    display: flex;
    height: 100px;
    align-items: center;
    justify-content: flex-end;
    position: relative;
    z-index: 1;
    border-radius: 8px;
}

.player-background img {
    width: 100%;
    overflow: hidden;
    opacity: 20%;
}

.player-background::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: linear-gradient(
    to top,
    rgba(175, 252, 65, 1) 0%,
    rgba(175, 252, 65, 0.3) 50%,
    rgba(175, 252, 65, 0.15) 65%,
    rgba(175, 252, 65, 0.075) 75.5%,
    rgba(175, 252, 65, 0.037) 82.85%,
    rgba(175, 252, 65, 0.019) 88%,
    #00000000 120%
  );
  pointer-events: none;
}

.player-now-playing {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-content: center;
    align-items: center;
    flex-wrap: nowrap;
    height: 3em;
    position: absolute;
    bottom: 0;
    left: 0;
    padding-left: 30px;
    z-index: 2;
    padding-bottom: 20px;
}

/* Metadata and play button section */
.player-metadata-play {
    flex: 1.5;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: flex-start;
    align-items: flex-end;
    flex-wrap: wrap;
    height: fit-content;
    gap: 1rem;
}

/* Play button styling */
#player-button {
    display: flex;
    justify-content: right;
}

#player-button img {
    width: 3em;
    height: 3em;
}

/* Metadata styling */
.player-metadata {
    display: block;
    align-items: top;
    align-items: top;
    text-align: right;
    margin-block-start: 1em;

}

#player-metadata-dj-name {
    color: $eist-secondary;
}

#dj-name {
    color: $eist;
    padding-bottom: 10px;
    padding-left: 10px;
    font-weight: 700;
    font-size: x-large;
}

#player-metadata-show-title {
    font-size: x-large;
    font-weight: bold;
    line-height: 1em;
    text-align: left;
    color: $eist;
}

#player-metadata-show-title-front-page {
    font-size: x-large;
    font-weight: bold;
    line-height: 1em;
    text-align: left;
    color: $eist;
}

#player-metadata-show-desc {
    font-size: small;
    line-height: 1em;
    text-align: left;
    color: $eist-secondary;
    display: flex;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
}

.player-discord {
    border-top:1px solid $eist-secondary;
    font-size: small;
    line-height: 1em;
    text-align: left;
    color: $eist-secondary;
}

.discord-logo {
    height: 23px;
    margin-bottom: -6px;
}

.discord:hover {
opacity: 0.7;
}

.app-link a {
  position: relative;
  overflow: hidden;
}

.app-link:hover {
  opacity: 0.7;
}

.player-front-page {
    display: flex;
    flex-direction: column;
}

.artist {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    margin-bottom: 1rem;
    border-radius: 8px;
    background-color: $eist;
}

.artist-image-container {
    display: flex;
    justify-content: left;
    position: relative;
    overflow: hidden;
    width: 100%;
}

.artist-image {
    display: block;
    width: 100%;
    height: auto;
    opacity: 0.9;
}

/* Gradient overlay */
.artist-image-container::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(transparent, $eist);
    pointer-events: none;
    opacity: 0.9;
}

/*This is kinda wack*/
/*.artist-image-container:hover .artist-image {
    filter: grayscale(0);
    opacity: 1;
}*/

.artist-content {
    display: flex;
    flex-direction: column;
}

.artist-content h3 {
    color: $eist-secondary;
    margin-block-end: unset !important;
}

.artist-desc {
    color: $eist-secondary;
}

.artist-desc a {
    color: $eist-secondary;
}

.index-footer {
    display: flex;
    text-align: end;
    font-size: large;
    position: relative;
    bottom: 5;
    align-items: center;
    justify-content: space-between;
    flex-direction: row-reverse;
    padding-top: 1em;
}

.banner-404 {
    margin: unset !important;
    padding-top: 125px;
    font-size: xxx-large;
    text-align: center;
    
}

body {
    -webkit-user-select: unset !important;
    -moz-user-select: unset !important;
    -ms-user-select: unset !important; 
    user-select: unset !important;
}

.pp {
    width: 60%;
    position: relative;
    z-index: 0;
}

#pagination {
    display: flex;
    width: 100%;
    justify-content: center;
    align-items: center;
    gap: 8px;
    margin-top: 20px;
    font-family: inherit;
}

#pagination button {
    background: none;
    border: none;
    color: inherit;
    font-size: 1.1em;
    cursor: pointer;
    padding: 8px 12px;
    transition: background-color 0.3s ease, color 0.3s ease;
}

#pagination button:hover:not(:disabled) {
    opacity: .4;
}

#pagination button:disabled {
    font-weight: bold;
}

#pagination button[disabled] {
    opacity: 0.5;
    cursor: not-allowed;
}

#copy-link {
    font-size: smaller;
}

a #host-link {
    text-decoration: none !important;
}

/* Fight with the new player CSS */
#player-small {
    width: 100%;
    max-width: 960px;
    box-sizing: border-box;
    z-index: 2;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    background-color: $eist;
    padding: 8px;
    margin: auto;
    display: flex; /* Enables centering of content */
    align-items: center;
    justify-content: center; /* Centers content inside */
}

.audio-player {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#playPauseBtn {
    width: 55px;
    height: 55px;
    padding: 2px;
}

.broadcast-status {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    width: 100%;
    flex-direction: row-reverse;
}

@media (max-width: 1800px) {
    #player-small {
        width: 97%;
        max-width: 735px;
    }
}

@media (max-width: 760px) {

    #playPauseBtn {
        width: 60px;
        height: 60px;
        padding: 5px;
    }

    .broadcast-status {
        justify-content: flex-start;
    }

    #player {
        flex-direction: column;
        height: 300px;
    }

    .hdr-wrapper {
        padding-top: 80px;
    }

    .header-logo {
        width: 125px;
        margin-top: 10px;
    }

    .player-metadata-play {
      flex-direction: column;
    }

    .player-background {
        flex: 2;
        overflow: hidden;
        display: flex;
        align-items: center;
        justify-content: flex-end;
        position: relative;
    }

    .player-background img {
        width: -webkit-fill-available;
        overflow: hidden;
        opacity: 20%;
    }

    .player-now-playing {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-content: center;
        align-items: center;
        flex-wrap: nowrap;
        height: 3em;
        position: absolute;
        bottom: 0;
        left: 0;
        padding-left: 30px;
        padding-bottom: 20px;
        z-index: 2;
    }

    #dj-name {
        color: $eist;
        padding-bottom: 10px;
        padding-left: 20px;
        font-weight: 700;
        font-size: x-large;
    }

    #player-metadata-show-title {
        font-size: medium;
    }

    .index-footer {
        display: flex;
        text-align: end;
        font-size: large;
        position: relative;
        bottom: 5;
        align-items: center;
        justify-content: space-between;
        flex-direction: row-reverse;
    }

    .artist {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        margin-bottom: 1rem;
        border-radius: 8px;
    }

    .artist-content {
        flex: 1;
    }

}

/* App download image styling */
.content img[alt*="App Store"],
.content img[alt*="Google Play"] {
  width: 40%;
  height: auto;
  margin: 10px 5px;
  display: inline-block;
  object-fit: contain;
  vertical-align: top;
}

